--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "recursive-readdir": "^2.2.2"
   }
 }
